--- a/packages/python/pyproject.toml
+++ b/packages/python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "drtrace"
-version = "0.4.0"
+version = "0.5.0"
 description = "Local log analysis client and daemon for Python applications"
 requires-python = ">=3.8"
 readme = "README.md"
@@ -36,7 +36,8 @@ dependencies = [
   "fastapi>=0.115,<0.116",
   "uvicorn[standard]>=0.30,<0.31",
   "psycopg2-binary>=2.9,<3.0",
-  "pydantic>=2.8,<2.9"
+  "pydantic>=2.8,<2.9",
+  "httpx>=0.27,<0.28"
 ]
 
 [project.urls]
