--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -5,15 +5,22 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Sync version
+      run: |
+        ./scripts/sync-versions.sh
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '24'  # Use Node 24+ for newer npm, otherwise 'publish' fails
         registry-url: 'https://registry.npmjs.org'
     - name: Install dependencies
       run: |
@@ -27,11 +34,6 @@ jobs:
       run: |
         cd packages/javascript/drtrace-client
         npm run build
-    - name: Sync version
-      run: |
-        ./scripts/sync-versions.sh
     - name: Publish to npm
       run: |
-        ./scripts/publish-npm.sh
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        npm publish --provenance --access public
