--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -24,17 +24,17 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - name: Install dependencies
       run: |
-        cd packages/javascript/drtrace-client
-        npm ci
+        npm ci --ignore-scripts
+      working-directory: packages/javascript/drtrace-client
     - name: Run tests
       run: |
-        cd packages/javascript/drtrace-client
-        npm test
+        npm test --if-present
+      working-directory: packages/javascript/drtrace-client
     - name: Build package
       run: |
-        cd packages/javascript/drtrace-client
-        npm run build
+        npm run build --if-present
+      working-directory: packages/javascript/drtrace-client
     - name: Publish to npm
       run: |
-        cd packages/javascript/drtrace-client
         npm publish --provenance --access public
+      working-directory: packages/javascript/drtrace-client
